--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
     "faker": "^5.1.0",
     "handlebars": "^4.7.6",
     "mysql2": "^2.2.5",
