--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-handlebars": "^5.2.0",
     "faker": "^5.1.0",
     "handlebars": "^4.7.6",
+    "method-override": "^3.0.0",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.6",
     "sequelize": "^6.3.5",
